Bug 1128110 - Share common operators on pointer-like GC classes; r=sfink